# opening-hours-rs

./: .gitignore  .gitmodules  .rustfmt.toml  CHANGELOG.md  Cargo.toml  README.md  build.rs  index.html  opening_hours.html  opening_hours.pyi  pyproject.toml  search.js
.github/: pull_request_template.md
.github/workflows/: checks.yml  coverage.yml  deploy-docs.yml  deploy-pypi.yml  deploy-rust.yml  deploy.yml  tests.yml
benches/: benchmarks.rs
compact-calendar/: Cargo.toml  README.md
compact-calendar/src/: lib.rs
data/: holidays.txt  holidays_public.txt  holidays_school.txt
data/templates/: countries.rs.jinja
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_oh.rs  oh.rs
fuzz/src/: lib.rs  tests.rs
opening-hours/: build.rs
opening-hours-c/: Cargo.toml  bindings.h  build.rs
opening-hours-c/src/: ctype.rs  lib.rs  tests.rs  util.rs
opening-hours-py/: .gitignore  Cargo.toml  README.md  opening_hours.pyi
opening-hours-py/src/: lib.rs
opening-hours-py/src/tests/: bindings.rs  doctests.rs  mod.rs
opening-hours-py/src/types/: datetime.rs  iterator.rs  location.rs  mod.rs  state.rs  timezone.rs
opening-hours-syntax/: Cargo.toml  LICENSE-MIT  README.md
opening-hours-syntax/doc/: normalize.md
opening-hours-syntax/src/: display.rs  error.rs  extended_time.rs  grammar.pest  lib.rs  normalize.rs  parser.rs  rubik.rs  simplify.rs  sorted_vec.rs  util.rs  warning.rs
opening-hours-syntax/src/normalize/: bounded.rs  canonical.rs  canonical_date.rs  canonical_time.rs  frame.rs  mod.rs  paving.rs
opening-hours-syntax/src/rewrite/: mod.rs
opening-hours-syntax/src/rules/: day.rs  mod.rs  time.rs
opening-hours-syntax/src/tests/: display.rs  mod.rs  normalize.rs  parser.rs  paving.rs  rubik.rs  rule_time.rs  simplify.rs  util_text.rs
opening-hours-syntax/src/util/: mod.rs  pairs.rs  rc.rs  sign.rs  text.rs  weekday.rs
opening-hours/benches/: benchmarks.rs
opening-hours/data/: holidays_public.global.txt  holidays_public.regional.txt  holidays_public.txt  holidays_school.global.txt  holidays_school.regional.txt  holidays_school.txt
opening-hours/data/templates/: countries.rs.jinja
opening-hours/doc/: normalize.md
opening-hours/src/: context.rs  error.rs  fuzzing.rs  lib.rs  opening_hours.rs  schedule.rs
opening-hours/src/country/: generated.rs  mod.rs
opening-hours/src/filter/: date_filter.rs  mod.rs  time_filter.rs
opening-hours/src/localization/: coordinates.rs  localize.rs  mod.rs
opening-hours/src/localization/country/: generated.rs  mod.rs
opening-hours/src/tests/: country.rs  eval_next_change.rs  eval_schedule.rs  eval_state.rs  fuzzing.rs  holiday_selector.rs  issues.rs  localization.rs  mod.rs  month_selector.rs  next_change.rs  parser.rs  performance.rs  regression.rs  regression_github.rs  regression_integration.rs  rules.rs  schedule.rs  stats.rs  time_selector.rs  week_selector.rs  weekday_selector.rs  year_selector.rs
opening-hours/src/tests/data/: sample.txt
opening-hours/src/tests/utils/: mod.rs  parse.rs  parser_schedule.rs  stats.rs
opening-hours/src/utils/: dates.rs  range.rs
python/: Cargo.toml  README.md  opening_hours.pyi  pyproject.toml  run_doctests.py
python/src/: convert.rs  errors.rs  lib.rs  types.rs
python/src/tests/: bindings.rs  doctests.rs  mod.rs
python/src/types/: location.rs  state.rs
scripts/: Pipfile  check-osm.py  check-version.py  generate-holidays.py  pyproject.toml
src/: context.rs  date_filter.rs  day_selector.rs  error.rs  extended_time.rs  lib.rs  localize.rs  main.rs  opening_hours.rs  schedule.rs  selector.rs  tests.rs  time_domain.rs  time_filter.rs  time_selector.rs  utils.rs
src/country/: generated.rs  mod.rs
src/parser/: grammar.pest  mod.rs
src/tests/: country.rs  holiday_selector.rs  issues.rs  localization.rs  mod.rs  month_selector.rs  next_change.rs  next_change_hint.rs  parser.rs  regression.rs  rules.rs  samples.rs  schedule.rs  selective.rs  time_selector.rs  week_selector.rs  weekday_selector.rs  year_selector.rs
src/tests/data/: sample.txt
src/utils/: dates.rs  mod.rs  range.rs
utils/: generate-holidays.py
