[package]
name = "opening-hours"
version = "0.4.0"
authors = ["Rémi Dupré <remi@dupre.io>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/remi-dupre/opening-hours-rs"
documentation = "https://docs.rs/opening-hours-rs"
homepage = "https://github.com/remi-dupre/opening-hours-rs"
description = "A parser and toolkit for the opening_hours fields in OpenStreetMap written in Rust."
edition = "2018"

[workspace]
members = ["opening-hours-syntax", "python"]

[dependencies]
chrono = "0.4"
once_cell = "1.5.2"
opening-hours-syntax = { path = "opening-hours-syntax", version = "0.4.0" }

[build-dependencies]
chrono = "0.4"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmarks"
harness = false
