[package]
name = "opening-hours"
version = "0.5.3"
authors = ["Rémi Dupré <remi@dupre.io>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/remi-dupre/opening-hours-rs"
documentation = "https://docs.rs/opening-hours"
homepage = "https://github.com/remi-dupre/opening-hours-rs"
description = "A parser and evaluation tool for the opening_hours fields in OpenStreetMap."
edition = "2021"

[workspace]
members = ["fuzz", "opening-hours-syntax", "python"]

[dependencies]
chrono = "0.4"
once_cell = "1.8"
opening-hours-syntax = { path = "opening-hours-syntax", version = "0.5.0" }

[build-dependencies]
chrono = "0.4"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmarks"
harness = false

[profile.bench]
codegen-units = 1
lto = "fat"
debug = true
