[package]
name = "opening-hours"
version = "0.5.6"
authors = ["Rémi Dupré <remi@dupre.io>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/remi-dupre/opening-hours-rs"
documentation = "https://docs.rs/opening-hours"
homepage = "https://github.com/remi-dupre/opening-hours-rs"
description = "A parser and evaluation tool for the opening_hours fields in OpenStreetMap."
edition = "2021"

[workspace]
members = ["compact-calendar", "fuzz", "opening-hours-syntax", "python"]
default-members = [".", "compact-calendar", "opening-hours-syntax"]

[dependencies]
chrono = "0.4"
compact-calendar = { path = "compact-calendar" }
flate2 = "1.0"
once_cell = "1.8"
opening-hours-syntax = { path = "opening-hours-syntax", version = "0.5.0" }

[build-dependencies]
compact-calendar = { path = "compact-calendar" }
chrono = "0.4"
flate2 = "1.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmarks"
harness = false

[profile.bench]
codegen-units = 1
lto = "fat"
