[project]
name = "opening_hours_py"
dynamic = ["version"]

[tool.poetry]
name = "opening_hours_py"
version = "1.1.0"
description = "A parser for the opening_hours fields from OpenStreetMap."
authors = ["Rémi Dupré <remi@dupre.io>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]
maturin = ">=1"
pdoc = "^15"
ruff = "^0.9"

[build-system]
requires = ["poetry>=0.12", "maturin>=1,<2"]
build-backend = "maturin"

[tool.maturin]
manifest-path = "opening-hours-py/Cargo.toml"
features = [
    # This feature must only be enabled during builds as it would break tests, see
    # https://pyo3.rs/v0.23.3/faq.html#i-cant-run-cargo-test-or-i-cant-build-in-a-cargo-workspace-im-having-linker-issues-like-symbol-not-found-or-undefined-reference-to-_pyexc_systemerror
    "pyo3/extension-module",
]
