[project]
name = "opening_hours_py"
description = "A parser for the opening_hours fields from OpenStreetMap."
keywords = ["openstreetmap", "parser", "time", "schedule"]
homepage = "https://github.com/remi-dupre/opening-hours-rs/tree/master/opening-hours-py"
documentation = "https://remi-dupre.github.io/opening-hours-rs/opening_hours.html"
repository = "https://github.com/remi-dupre/opening-hours-rs"
changelog = "https://github.com/remi-dupre/opening-hours-rs/blob/master/CHANGELOG.md"
readme = "opening-hours-py/README.md"
authors = [{name = "Rémi Dupré", email = "remi+openinghours@dupre.io"}]
requires-python = "~=3.10"
version = "2.1.3"
dynamic = ["license", "license-files"]

[dependency-groups]
lint = ["ruff (~=0.15)"]
publish = ["maturin (>=1)", "pdoc (>=16)"]
test = ["pytest", "pytest-cov[all]"]

dev = [
  {include-group = "lint"},
  {include-group = "test"},
  {include-group = "publish"},
]

[build-system]
requires = ["poetry>=0.12", "maturin>=1,<2"]
build-backend = "maturin"

# Tool : poetry

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.test]
optional = true

[tool.poetry.group.publish]
optional = true

# Tool : maturin

[tool.maturin]
manifest-path = "opening-hours-py/Cargo.toml"
features = [
    # This feature must only be enabled during builds as it would break tests, see
    # https://pyo3.rs/v0.23.3/faq.html#i-cant-run-cargo-test-or-i-cant-build-in-a-cargo-workspace-im-having-linker-issues-like-symbol-not-found-or-undefined-reference-to-_pyexc_systemerror
    "pyo3/extension-module",
]
