[package]
name = "compact-calendar"
version = "0.10.1"
authors = ["Rémi Dupré <remi@dupre.io>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/remi-dupre/opening-hours-rs"
documentation = "https://docs.rs/compact-calendar"
homepage = "https://github.com/remi-dupre/opening-hours-rs/tree/master/compact-calendar"
description = "Compact representation of a set of days based on a bit-maps"
edition = "2021"

[dependencies]
chrono = { version = "0.4", default-features = false }
