[package]
name = "compact-calendar"
version = "2.1.0"
authors = ["Rémi Dupré <remi@dupre.io>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/remi-dupre/opening-hours-rs"
documentation = "https://docs.rs/compact-calendar"
homepage = "https://github.com/remi-dupre/opening-hours-rs/tree/master/compact-calendar"
description = "Compact representation of a set of days based on a bit-maps"
edition = "2024"

[dependencies]
chrono = { version = "0.4", default-features = false }

[lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"
