[package]
name = "fuzz"
version = "0.1.0"
authors = ["Rémi Dupré <remi@dupre.io>"]
edition = "2021"

[[bin]]
name = "parse_oh"
path = "fuzz_targets/oh.rs"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { version = "0.4.0", features = ["derive"] }
chrono = "0.4"
libfuzzer-sys = "0.3"
opening-hours = { path = ".." }
