[package]
name = "fuzz"
version = "0.1.0"
authors = ["Rémi Dupré <remi@dupre.io>"]
edition = "2021"

[features]
default = ["fuzzing"]
fuzzing = []

[[bin]]
name = "fuzz_oh"
path = "fuzz_targets/fuzz_oh.rs"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { version = "1", features = ["derive"] }
chrono = "0.4"
libfuzzer-sys = "0.4"
opening-hours = { path = "..", features = ["auto-country", "auto-timezone", "fuzzing"] }
