[package]
name = "opening-hours-c"
version = "2.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4"
opening-hours = { version = "2.1.0", path = ".." }
opening-hours-syntax = { version = "2.1.0", path = "../opening-hours-syntax" }

[build-dependencies]
cbindgen = { version = "*", default-features = false }

[dev-dependencies]
rstest = "0"
