[package]
name = "opening-hours-syntax"
version = "0.10.0"
authors = ["Rémi Dupré <remi@dupre.io>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/remi-dupre/opening-hours-rs"
documentation = "https://docs.rs/opening-hours-syntax"
homepage = "https://github.com/remi-dupre/opening-hours-rs/tree/master/opening-hours-syntax"
description = "A parser for opening_hours fields in OpenStreetMap."
edition = "2021"

[dependencies]
chrono = { version = "0.4", default-features = false }
log = { version = "0.4", features = [ "kv" ], optional = true }
pest = "2.0"
pest_derive = "2.0"

[features]
default = ["log"]
log = ["dep:log"]
