[package]
name = "opening-hours-syntax"
version = "2.1.4"
authors = ["Rémi Dupré <remi@dupre.io>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/remi-dupre/opening-hours-rs"
documentation = "https://docs.rs/opening-hours-syntax"
homepage = "https://github.com/remi-dupre/opening-hours-rs/tree/master/opening-hours-syntax"
description = "A parser for opening_hours fields in OpenStreetMap."
edition = "2024"

[dependencies]
chrono = { version = "0.4", default-features = false }
pest = { version = "2.0", default-features = false }
pest_derive = { version = "2.0", default-features = false }

[dev-dependencies]
rstest = "0"

[features]
default = ["std"]
std = ["chrono/std", "pest/std", "pest_derive/std"]

[lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"
