[package]
name = "opening-hours-py"
version = "0.5.6"
authors = ["Rémi Dupré <remi@dupre.io>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/remi-dupre/opening-hours-rs"
documentation = "https://remi-dupre.github.io/opening-hours-rs/opening_hours.html"
homepage = "https://github.com/remi-dupre/opening-hours-rs/tree/master/python"
description = "A parser and toolkit for the opening_hours in OpenStreetMap written in Rust."
edition = "2021"

[lib]
name = "opening_hours"
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
lto = "fat"

[dependencies]
chrono = "0.4"
opening-hours = { path = ".." }
opening-hours-syntax = { path = "../opening-hours-syntax" }

[dependencies.pyo3]
version = "0.16"
features = ["extension-module"]
