[package]
name = "opening-hours-py"
version = "0.9.1"
authors = ["Rémi Dupré <remi@dupre.io>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/remi-dupre/opening-hours-rs"
documentation = "https://remi-dupre.github.io/opening-hours-rs/opening_hours.html"
homepage = "https://github.com/remi-dupre/opening-hours-rs/tree/master/python"
description = "A parser and toolkit for the opening_hours in OpenStreetMap written in Rust."
edition = "2021"

[lib]
name = "opening_hours"
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4"
opening-hours = { path = "..", version = "0.9.1" }
opening-hours-syntax = { path = "../opening-hours-syntax", version = "0.9.1" }
pyo3 = { version = "0.22", features = ["chrono", "extension-module", "generate-import-lib"] }
pyo3-log = "0.11"
