[tool.poetry]
name = "opening-hours-py"
version = "0.1.10"
description = "A parser for the opening_hours fields from OpenStreetMap."
authors = ["Rémi Dupré <remi@dupre.io>"]

[tool.poetry.dependencies]
python = "^3.9"
maturin = "^0.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12", "maturin"]
build-backend = "maturin"
