[tool.poetry]
name = "scripts"
version = "0.1.0"
description = ""
authors = ["Rémi Dupré <remi@dupre.io>"]
license = "MIT or Apache 2.0"

[tool.poetry.dependencies]
python = "^3.10"
workalendar = "^17.0.0"
typed-argument-parser = "^1.6.1"
toml = "^0.10.2"
httpx = "^0.23.0"
semantic-version = "^2.8.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
