[tool.poetry]
name = "scripts"
version = "0.1.0"
description = ""
authors = ["Rémi Dupré <remi@dupre.io>"]
license = "MIT or Apache 2.0"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.10"
jinja2 = "^3.1"
semantic-version = "^2.8.5"
toml = "^0.10.2"
typed-argument-parser = "^1.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
